// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SkipLink basic 1`] = `
.c2 {
  box-sizing: border-box;
  font-size: inherit;
  line-height: inherit;
  color: #7D4CDB;
  font-weight: 600;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
}

.c2:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  width: 0;
  height: 0;
  overflow: hidden;
  position: absolute;
}

<div
  class="c0"
>
  <div>
    <a
      aria-hidden="true"
      class="c1 c2"
      id="main"
      tabindex="-1"
    />
    Main Content
    <input
      type="text"
      value="main content"
    />
  </div>
  <footer>
    <a
      aria-hidden="true"
      class="c1 c2"
      id="footer"
      tabindex="-1"
    />
    <input
      type="text"
      value="footer"
    />
  </footer>
</div>
`;

exports[`SkipLink basic 2`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 lkVXQD"
>
  <div>
    <a
      aria-hidden="true"
      class="SkipLinkTarget__HiddenAnchor-sc-16wjfgk-0 buKRUY StyledAnchor-sc-1rp7lwl-0 jgeOSx"
      id="main"
      tabindex="-1"
    />
    Main Content
    <input
      type="text"
      value="main content"
    />
  </div>
  <footer>
    <a
      aria-hidden="true"
      class="SkipLinkTarget__HiddenAnchor-sc-16wjfgk-0 buKRUY StyledAnchor-sc-1rp7lwl-0 jgeOSx"
      id="footer"
      tabindex="-1"
    />
    <input
      type="text"
      value="footer"
    />
  </footer>
</div>
`;

exports[`SkipLink basic 3`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 lkVXQD"
>
  <div>
    <a
      aria-hidden="true"
      class="SkipLinkTarget__HiddenAnchor-sc-16wjfgk-0 buKRUY StyledAnchor-sc-1rp7lwl-0 jgeOSx"
      id="main"
      tabindex="-1"
    />
    Main Content
    <input
      type="text"
      value="main content"
    />
  </div>
  <footer>
    <a
      aria-hidden="true"
      class="SkipLinkTarget__HiddenAnchor-sc-16wjfgk-0 buKRUY StyledAnchor-sc-1rp7lwl-0 jgeOSx"
      id="footer"
      tabindex="-1"
    />
    <input
      type="text"
      value="footer"
    />
  </footer>
</div>
`;
